--- a/src/js/pupInfo/pupInfo.html
+++ b/src/js/pupInfo/pupInfo.html
@@ -17,56 +17,56 @@
         <div>Pup's Medical Information</div>
         <div>
             <label class="label">Last rabies shot</label>
-            <input class="input" type="text" ng-model="pupInfo.newMed.rabies">
+            <input class="input" type="date" ng-model="pupInfo.newMed.rabies">
         </div>
         <div>
             <label class="label">Date: lepto shot</label>
-            <input class="input" type="text" ng-model="pupInfo.newMed.lepto">
+            <input class="input" type="date" ng-model="pupInfo.newMed.lepto">
         </div>
         <div>
             <label class="label">Date: dhpp shot</label>
-            <input class="input" type="text" ng-model="pupInfo.newMed.dhpp">
+            <input class="input" type="date" ng-model="pupInfo.newMed.dhpp">
         </div>
         <div>
             <label class="label">Date: bordetella shot</label>
-            <input class="input" type="text" ng-model="pupInfo.newMed.bordetella">
+            <input class="input" type="date" ng-model="pupInfo.newMed.bordetella">
         </div>
         <div>
             <label class="label">Enter date for chip renewal</label>
-            <input class="input" type="text" ng-model="pupInfo.newMed.chipInfo">
+            <input class="input" type="date" ng-model="pupInfo.newMed.chipInfo">
         </div>
         <div>
             <label class="label">Last heartworm shot</label>
-            <input class="input" type="text" ng-model="pupInfo.newMed.heartWorm">
+            <input class="input" type="date" ng-model="pupInfo.newMed.heartWorm">
         </div>
         <div>
             <label class="label">Last flea prevention</label>
-            <input class="input" type="text" ng-model="pupInfo.newMed.fleaPrevention">
+            <input class="input" type="date" ng-model="pupInfo.newMed.fleaPrevention">
         </div>
         <div>
             <label class="label">Last fecal check, change this lol</label>
-            <input class="input" type="text" ng-model="pupInfo.newMed.fecal">
+            <input class="input" type="date" ng-model="pupInfo.newMed.fecal">
         </div>
         <div>
             <label class="label">Last blood/urine test</label>
-            <input class="input" type="text" ng-model="pupInfo.newMed.bloodUrine">
+            <input class="input" type="date" ng-model="pupInfo.newMed.bloodUrine">
         </div>
         <div>
             <label class="label">Enter date for next vet visit</label>
-            <input class="input" type="text" ng-model="pupInfo.newMed.nextVisit">
+            <input class="input" type="date" ng-model="pupInfo.newMed.nextVisit">
         </div>
         <div>
             <label class="label">Last dental exam</label>
-            <input class="input" type="text" ng-model="pupInfo.newMed.dentalExam">
+            <input class="input" type="date" ng-model="pupInfo.newMed.dentalExam">
         </div>
         <div>
             <label class="label">Last rattlesnake training</label>
-            <input class="input" type="text" ng-model="pupInfo.newMed.rattleSnakeTraining">
+            <input class="input" type="date" ng-model="pupInfo.newMed.rattleSnakeTraining">
         </div>
         <div>
             <!-- Add the ability for the user to add notes here, for reminders -->
             <label class="label">Medications: last dosage</label>
-            <input class="input" type="text" ng-model="pupInfo.newMed.medications">
+            <input class="input" type="date" ng-model="pupInfo.newMed.medications">
         </div>
         <div>
             <button ng-click="pupInfo.addMed(pupInfo.newMed)">Submit</button>
