--- a/src/index.html
+++ b/src/index.html
@@ -18,14 +18,13 @@
 <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.css" />
 <!--endbower-->
 <!--inject:css-->
-<link rel="stylesheet" href="js/about/about.css">
 <link rel="stylesheet" href="js/addPup/addPup.css">
 <link rel="stylesheet" href="js/equipment/equipment.css">
 <link rel="stylesheet" href="js/events/events.css">
 <link rel="stylesheet" href="js/login/login.css">
+<link rel="stylesheet" href="js/photos/photo.css">
 <link rel="stylesheet" href="js/parks/parks.css">
 <link rel="stylesheet" href="js/pupInfo/pupInfo.css">
-<link rel="stylesheet" href="js/photos/photo.css">
 <!--endinject-->
 <link rel="stylesheet" href="style/main.css">
 
@@ -78,13 +77,12 @@
 <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
 <script src="bower_components/underscore/underscore.js"></script>
 <script src="bower_components/angular-ui-router-styles/ui-router-styles.js"></script>
+<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 <!--endbower-->
 
 <!--inject:js-->
 
 <script src="js/app.module.js"></script>
-
-<script src="js/about/about.controller.js"></script>
 
 <script src="js/addPup/addPup.controller.js"></script>
 
@@ -122,9 +120,9 @@
 
 <script src="js/extra/shelter.controller.js"></script>
 
-<script src="js/login/login.controller.js"></script>
-
 <script src="js/medical/medical.controller.js"></script>
+
+<script src="js/login/login.controller.js"></script>
 
 <script src="js/nav/nav.controller.js"></script>
 
@@ -132,11 +130,11 @@
 
 <script src="js/overview/overview.controller.js"></script>
 
+<script src="js/photos/photo.controller.js"></script>
+
 <script src="js/parks/parks.controller.js"></script>
 
 <script src="js/pupInfo/pupInfo.controller.js"></script>
-
-<script src="js/photos/photo.controller.js"></script>
 
 <!--endinject-->
 <script src="style/main.js"></script>
