--- a/src/js/addPup/addPup.html
+++ b/src/js/addPup/addPup.html
@@ -5,10 +5,10 @@
 			<label class="label">Enter pups name:</label>
 			<input class="input" type="text" ng-model="pup.newPup.name">
 		</div>
-		<div>
+		<!-- <div>
 			<label class="label">Enter pups age:</label>
 			<input class="input" type="text" ng-model="pup.newPup.age">
-		</div>
+		</div> -->
 		<div>
 			<label class="label">Enter pups color:</label>
 			<input class="input" type="text" ng-model="pup.newPup.color">
