--- a/src/js/overview/overview.html
+++ b/src/js/overview/overview.html
@@ -8,7 +8,9 @@
         <p>Zip: {{overview.owner.zipCode}}</p>
         <p>NSR Registration Number: {{overview.owner.nsrRegistration}}</p>
         <!-- Give the user the ability to chenge and update the next vet visit -->
-        <p>Next Vet Appoinment: {{overview.owner.nextVetVisit}}</p>
+        <div ng-repeat='date in overview.vetAppt'>
+            <p>Next Vet Visit is: {{date | date}}</p>
+        </div>
         <br>
     </div>
     <table>
@@ -17,18 +19,17 @@
         </thead>
         <tbody>
             <tr ng-repeat="pup in overview.owner.pups">
-                <td><img ng-src="{{pup.picture.url | fpConvert: {filter:'sharpen', w:300, h:150} }}" ></td>
+                <td><img ng-src="{{pup.picture.url | fpConvert: {filter:'sharpen', w:300, h:150} }}"></td>
                 <td>Puppy's Name: {{pup.name}}</td>
                 <td>Puppy's Birthday: {{pup.birthdate | date}}</td>
                 <td>Puppy's Chip Information: {{pup.chipInformation}}</td>
-                    <td ng-click="editing = true">Puppy's Name: {{pup.name}}</td>
-                    <td ng-click="editing = true">Puppy's Birthday: {{pup.birthdate | date}}</td>
-                    <td ng-click="editing = true">Puppy's Chip Information: {{pup.chipInformation}}</td>
+                <td ng-click="editing = true">Puppy's Name: {{pup.name}}</td>
+                <td ng-click="editing = true">Puppy's Birthday: {{pup.birthdate | date}}</td>
+                <td ng-click="editing = true">Puppy's Chip Information: {{pup.chipInformation}}</td>
                 <td ng-show="editing">
                     <button class="button alert tiny" ng-click="overview.deletePup(pup)">delete</button>
-                    <button class="button tiny" ng-click="editing = false">close</button>    
+                    <button class="button tiny" ng-click="editing = false">close</button>
                 </td>
-
                 <td>
                     <button class="button tiny" ui-sref="pupInfo({_id: pup._id})">PUP'S INFO</button>
                 </td>
@@ -49,7 +50,7 @@
             </div>
             <div class="large-4 columns">
                 <label class='label black'>When is it Due</label>
-                <input type="text" ng-model="overview.newTodo.date">
+                <input type="date" ng-model="overview.newTodo.date">
             </div>
             <button class="button medium warning" ng-click="overview.addTodo(overview.newTodo, overview.ownerId)">Add new task</button>
         </div>
@@ -59,13 +60,13 @@
             <tr ng-repeat="task in overview.owner.todo | orderBy: Date">
                 <td ng-hide="editing" ng-click="editing = true">{{task.task}} | {{task.date | date}}</td>
                 <td ng-show="editing">
-                    <form ng-submit="editing = false">  
+                    <form ng-submit="editing = false">
                         <div class="large-5 columns">
                             <input style="border: none; box-shadow: none;" type="text" ng-model="task.task" ng-required/>
                         </div>
                         <div class="large-4 columns">
                             <input style="border: none; box-shadow: none;" type="text" ng-model="task.date" ng-required/>
-                        </div>  
+                        </div>
                         <td ng-show="editing">
                             <button class="button warning tiny" type="submit" ng-click="overview.updateTodo(task, task._id)">Save</button>
                             <button class="button tiny" ng-click="editing = false">close</button>
@@ -74,7 +75,7 @@
                 </td>
                 <td>
                     <button class="button tiny" ng-hide="editing" ng-click="editing = true">Edit</button>
-                    <button class="button tiny alert" ng-hide="editing" ng-click="overview.deleteTodo(task)">Delete</button>
+                    <button class="button tiny alert" ng-hide="editing" ng-click="overview.deleteTodo(task)">Done with Task</button>
                 </td>
             </tr>
-        </tbody> 
+        </tbody>
