--- a/src/index.html
+++ b/src/index.html
@@ -26,31 +26,21 @@
     <link rel="stylesheet" href="js/pupInfo/pupInfo.css">
     <!--endinject-->
     <link rel="stylesheet" href="style/main.css">
+<link href="https://fonts.googleapis.com/css?family=Gabriela|Lobster" rel="stylesheet">
 </head>
 
 <body>
-<div id="navbar.html">
-	 <nav class="navbar navbar-inverse" role="navigation">
-      <div class="navbar-header">
-        <a class="navbar-brand" ui-sref="landingpage">LandingPage</a>
-      </div>
-      <ul class="nav navbar-nav">
-        <li><a ui-sref="home">Home</a></li>
-        <li><a ui-sref="about">About</a></li>
-        <li ng-hide="signedIn()"><a href="/login">Log In</a></li>
-        <li ng-show="signedIn()"><a ng-click="logout()">Log Out</a></li>
-      </ul>
-    </nav>
-</div>
 
-
-    <div data-sticky-container>
-        <div class="title-bar" data-sticky data-options="marginTop:0;" style="width:100%" data-top-anchor="1" data-btm-anchor="content:bottom">
-            <div class="title-bar-left">
-               <div>chewBarka</div>
-            </div>
-        </div>
-    </div>
+<nav class="nav">
+  <div class="nav-left">
+    <a class="navTitle nav-item is-brand" href="#">
+    chewBarka
+    </a>
+  </div>
+    </a>
+  </div>
+  </div>
+</nav>
 
     <div ng-controller="navController as nav">
         <div id="mySidenav" class="sidenav">
@@ -126,6 +116,7 @@
     <script src="js/pupInfo/pupInfo.controller.js"></script>
     <!--endinject-->
     <script src="style/main.js"></script>
+    <<script src="http://use.fontawesome.com/29fd29a782.js"></script>
     <!--endanglarjs-->
 </body>
 
