--- a/src/js/login/login.html
+++ b/src/js/login/login.html
@@ -1,5 +1,4 @@
-<div class='container'>
-<div class="large-3 large-centered columns">
+<!-- <div class="large-3 large-centered columns">
     <div class="login-box">
         <div class="row">
             <div class="large-12 columns">
@@ -34,4 +33,80 @@
         </div>
     </div>
 </div>
+ -->
+
+<div id="loginField" class="column is-mobile">
+<div class="column is-half is-offset-one-quarter">
+<label class="label">Enter Your Email</label>
+<p class="control has-icon">
+    <input class="input is-medium" type="email" placeholder="Email" ng-model="login.loginInfo.email">
+    <i class="fa fa-envelope"></i>
+</p>
+<label class="label">Enter Your Password</label>
+<p class="control has-icon">
+    <input class="input is-medium" type="password" placeholder="Password" ng-model="login.loginInfo.password">
+    <i class="fa fa-lock"></i>
+</p>
+<p class="control">
+    <label class="checkbox">
+        <input type="checkbox"> Remember me
+    </label>
+</p>
+<p class="control">
+    <button class="button is-success" ng-click="login.fakeLogin()">Log In</button>
+</p>
+  <div class="label">
+    <label class="label">Select an Owner</label>
+  </div>
+  <div class="control">
+    <div class="select is-succes is-fullwidth">
+      <select ng-model="login.selectedOwner" ng-options="owner._id as owner.firstName for owner in login.owners">
+        <option value="" disabled>Owners</option>
+      </select>
+    </div>
+  </div>
 </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
