--- a/src/js/overview/overview.html
+++ b/src/js/overview/overview.html
@@ -1,81 +1,154 @@
-<div class="contianer">
+<div class=container>
+    <!-- Here the user will see their todo list and some important information -->
+    <div class=" bodyFont tile is-ancestor">
+        <div class="tile is-parent">
+            <article class="tile is-child box">
+                <p class="title">Here are your pup needs list</p>
+                <p class="subtitle">Add a new task and the date its due</p>
+                <div class="content">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>Task</th>
+                                <th>Date</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr <tr ng-repeat="task in overview.owner.todo | orderBy: Date">
+                                <td>{{task.task}}</td>
+                                <td>{{task.date | date}}</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <input type="text" ng-model="overview.newTodo.task">
+                                </td>
+                                <td>
+                                    <input type="date" ng-model="overview.newTodo.date">
+                                </td>
+                                <td>
+                                    <button ng-click="overview.addTodo(overview.newTodo, overview.ownerId)">Add new task</button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </article>
+        </div>
+        <div class="tile is-parent is-3">
+            <article class="tile is-child box">
+                <p class="title">Hey {{overview.owner.firstName}}, over here!</p>
+                <p class="subtitle">My current information</p>
+                <div class="content">
+                    <p>Email: {{overview.owner.email}}</p>
+                    <p>Zip: {{overview.owner.zipCode}}</p>
+                    <p>NSR Registration Number: {{overview.owner.nsrRegistration}}</p>
+                    <p>Next visit to the vet:</p>
+                    <div ng-repeat='date in overview.vetAppt'>
+                        <p>{{date | date}}</p>
+                    </div>
+                </div>
+            </article>
+        </div>
+    </div>
+
+
+    <!-- Here we will display pups -->
     <div>
-        <label>
-            <h4>OWNER'S Information</h4></label>
-        <p>First Name: {{overview.owner.firstName}}</p>
-        <p>Last Name: {{overview.owner.lastName}}</p>
-        <p>Email: {{overview.owner.email}}</p>
-        <p>Zip: {{overview.owner.zipCode}}</p>
-        <p>NSR Registration Number: {{overview.owner.nsrRegistration}}</p>
-        <!-- Give the user the ability to chenge and update the next vet visit -->
-        <div ng-repeat='date in overview.vetAppt'>
-            <p>Next Vet Visit is: {{date | date}}</p>
-        </div>
-        <br>
+        <button class="button success" ng-click="overview.addPup()"><strong>Add a Pup</strong></button>
     </div>
-    <table>
-        <thead>
-            <th>PUP Information</th>
-        </thead>
-        <tbody>
-            <tr ng-repeat="pup in overview.owner.pups">
-                <td><img ng-src="{{pup.picture.url | fpConvert: {filter:'sharpen', w:300, h:150} }}"></td>
-                <td>Puppy's Name: {{pup.name}}</td>
-                <td>Puppy's Birthday: {{pup.birthdate | date}}</td>
-                <td>Puppy's Chip Information: {{pup.chipInformation}}</td>
-                <td ng-click="editing = true">Puppy's Name: {{pup.name}}</td>
-                <td ng-click="editing = true">Puppy's Birthday: {{pup.birthdate | date}}</td>
-                <td ng-click="editing = true">Puppy's Chip Information: {{pup.chipInformation}}</td>
-                <td ng-show="editing">
-                    <button class="button alert tiny" ng-click="overview.deletePup(pup)">delete</button>
-                    <button class="button tiny" ng-click="editing = false">close</button>
-                </td>
-                <td>
-                    <button class="button tiny" ui-sref="pupInfo({_id: pup._id})">PUP'S INFO</button>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <button class="button success" ng-click="overview.addPup()"><strong>Add a Pup</strong></button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <!--Add a todo-->
-    <div class="form-control">
-        <div class="row">
-            <div class="large-4 columns">
-                <label class='label black'>Enter New Task</label>
-                <input type="text" ng-model="overview.newTodo.task">
-            </div>
-            <div class="large-4 columns">
-                <label class='label black'>When is it Due</label>
-                <input type="date" ng-model="overview.newTodo.date">
-            </div>
-            <button class="button medium warning" ng-click="overview.addTodo(overview.newTodo, overview.ownerId)">Add new task</button>
+    <div class="tile is-ancestor" ng-repeat="pup in overview.owner.pups">
+        <div class="tile is-parent is-6">
+            <article class="tile is-child is-vertical notification is-primary">
+                <table>
+                    <thead>
+                        <th class='pupName'>{{pup.name}}</th>
+                        <th class='pupData'>Puppy's Birthday:</th>
+                        <th class='pupData'>Puppy's Chip Information:</th>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <figure class="pupPhoto">
+                                    <img width="300" height="100" ng-src="{{pup.picture.url}}">
+                                </figure>
+                            </td>
+                            <td class='pupData'>{{pup.birthdate | date}}</td>
+                            <td class='pupData'>{{pup.chipInformation}}</td>          
+                            <td>
+                                <button class="button tiny" ui-sref="pupInfo({_id: pup._id})">PUP'S INFO</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </article>
         </div>
     </div>
-    <table>
-        <tbody>
-            <tr ng-repeat="task in overview.owner.todo | orderBy: Date">
-                <td ng-hide="editing" ng-click="editing = true">{{task.task}} | {{task.date | date}}</td>
-                <td ng-show="editing">
-                    <form ng-submit="editing = false">
-                        <div class="large-5 columns">
-                            <input style="border: none; box-shadow: none;" type="text" ng-model="task.task" ng-required/>
-                        </div>
-                        <div class="large-4 columns">
-                            <input style="border: none; box-shadow: none;" type="text" ng-model="task.date" ng-required/>
-                        </div>
-                        <td ng-show="editing">
-                            <button class="button warning tiny" type="submit" ng-click="overview.updateTodo(task, task._id)">Save</button>
-                            <button class="button tiny" ng-click="editing = false">close</button>
-                        </td>
-                    </form>
-                </td>
-                <td>
-                    <button class="button tiny" ng-hide="editing" ng-click="editing = true">Edit</button>
-                    <button class="button tiny alert" ng-hide="editing" ng-click="overview.deleteTodo(task)">Done with Task</button>
-                </td>
-            </tr>
-        </tbody>
+</div>
+<!-- <table>
+    <thead>
+        <th>PUP Information</th>
+    </thead>
+    <tbody>
+        <tr ng-repeat="pup in overview.owner.pups">
+            <td><img ng-src="{{pup.picture.url | fpConvert: {filter:'sharpen', w:300, h:150} }}"></td>
+            <td>Puppy's Name: {{pup.name}}</td>
+            <td>Puppy's Birthday: {{pup.birthdate | date}}</td>
+            <td>Puppy's Chip Information: {{pup.chipInformation}}</td>
+            <td ng-click="editing = true">Puppy's Name: {{pup.name}}</td>
+            <td ng-click="editing = true">Puppy's Birthday: {{pup.birthdate | date}}</td>
+            <td ng-click="editing = true">Puppy's Chip Information: {{pup.chipInformation}}</td>
+            <td ng-show="editing">
+                <button class="button alert tiny" ng-click="overview.deletePup(pup)">delete</button>
+                <button class="button tiny" ng-click="editing = false">close</button>
+            </td>
+            <td>
+                <button class="button tiny" ui-sref="pupInfo({_id: pup._id})">PUP'S INFO</button>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <button class="button success" ng-click="overview.addPup()"><strong>Add a Pup</strong></button>
+            </td>
+        </tr>
+    </tbody>
+</table> -->
+<!--Add a todo-->
+<!-- <div class="form-control">
+    <div class="row">
+        <div class="large-4 columns">
+            <label class='label black'>Enter New Task</label>
+            <input type="text" ng-model="overview.newTodo.task">
+        </div>
+        <div class="large-4 columns">
+            <label class='label black'>When is it Due</label>
+            <input type="date" ng-model="overview.newTodo.date">
+        </div>
+        <button class="button medium warning" ng-click="overview.addTodo(overview.newTodo, overview.ownerId)">Add new task</button>
+    </div>
+</div>
+<table>
+    <tbody>
+        <tr ng-repeat="task in overview.owner.todo | orderBy: Date">
+            <td ng-hide="editing" ng-click="editing = true">{{task.task}} | {{task.date | date}}</td>
+            <td ng-show="editing">
+                <form ng-submit="editing = false">
+                    <div class="large-5 columns">
+                        <input style="border: none; box-shadow: none;" type="text" ng-model="task.task" ng-required/>
+                    </div>
+                    <div class="large-4 columns">
+                        <input style="border: none; box-shadow: none;" type="text" ng-model="task.date" ng-required/>
+                    </div>
+                    <td ng-show="editing">
+                        <button class="button warning tiny" type="submit" ng-click="overview.updateTodo(task, task._id)">Save</button>
+                        <button class="button tiny" ng-click="editing = false">close</button>
+                    </td>
+                </form>
+            </td>
+            <td>
+                <button class="button tiny" ng-hide="editing" ng-click="editing = true">Edit</button>
+                <button class="button tiny alert" ng-hide="editing" ng-click="overview.deleteTodo(task)">Done with Task</button>
+            </td>
+        </tr>
+    </tbody>
+</table>
+</div> -->
