--- a/src/index.html
+++ b/src/index.html
@@ -87,6 +87,8 @@
 
 <script src="js/addPup/addPup.controller.js"></script>
 
+<script src="js/equipment/equipment.controller.js"></script>
+
 <script src="js/core/crud.factory.js"></script>
 
 <script src="js/core/equipment.factory.js"></script>
@@ -109,19 +111,19 @@
 
 <script src="js/core/pup.factory.js"></script>
 
+<script src="js/core/register.factory.js"></script>
+
 <script src="js/core/todo.factory.js"></script>
 
-<script src="js/equipment/equipment.controller.js"></script>
-
 <script src="js/events/events.controller.js"></script>
+
+<script src="js/login/login.controller.js"></script>
 
 <script src="js/extra/grooming.controller.js"></script>
 
 <script src="js/extra/links.controller.js"></script>
 
 <script src="js/extra/shelter.controller.js"></script>
-
-<script src="js/login/login.controller.js"></script>
 
 <script src="js/medical/medical.controller.js"></script>
 
@@ -136,6 +138,8 @@
 <script src="js/photos/photo.controller.js"></script>
 
 <script src="js/pupInfo/pupInfo.controller.js"></script>
+
+<script src="js/values/values.js"></script>
 
 <!--endinject-->
 <script src="style/main.js"></script>
