--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,11 @@
     <!--inject:css-->
     <link rel="stylesheet" href="js/addPup/addPup.css">
     <link rel="stylesheet" href="js/equipment/equipment.css">
-    <link rel="stylesheet" href="js/events/events.css">
-    <link rel="stylesheet" href="js/login/login.css">
     <link rel="stylesheet" href="js/overview/overview.css">
     <link rel="stylesheet" href="js/parks/parks.css">
     <link rel="stylesheet" href="js/photos/photo.css">
+    <link rel="stylesheet" href="js/events/events.css">
+    <link rel="stylesheet" href="js/login/login.css">
     <link rel="stylesheet" href="js/pupInfo/pupInfo.css">
     <!--endinject-->
     <link rel="stylesheet" href="style/main.css">
@@ -33,7 +33,7 @@
 
 <nav class="nav">
   <div class="nav-left">
-    <a class="navTitle nav-item is-brand" href="#">
+    <a class="navTitle nav-item is-brand">
     chewBarka
     </a>
   </div>
@@ -103,20 +103,20 @@
     <script src="js/core/pup.factory.js"></script>
     <script src="js/core/todo.factory.js"></script>
     <script src="js/equipment/equipment.controller.js"></script>
-    <script src="js/events/events.controller.js"></script>
+    <script src="js/medical/medical.controller.js"></script>
     <script src="js/extra/grooming.controller.js"></script>
     <script src="js/extra/links.controller.js"></script>
     <script src="js/extra/shelter.controller.js"></script>
-    <script src="js/login/login.controller.js"></script>
-    <script src="js/medical/medical.controller.js"></script>
-    <script src="js/navBar/navbar.controller.js"></script>
     <script src="js/overview/overview.controller.js"></script>
+    <script src="js/navBar/navbar.controller.js"></script>
     <script src="js/parks/parks.controller.js"></script>
     <script src="js/photos/photo.controller.js"></script>
+    <script src="js/events/events.controller.js"></script>
+    <script src="js/login/login.controller.js"></script>
     <script src="js/pupInfo/pupInfo.controller.js"></script>
     <!--endinject-->
     <script src="style/main.js"></script>
-    <<script src="http://use.fontawesome.com/29fd29a782.js"></script>
+    <script src="http://use.fontawesome.com/29fd29a782.js"></script>
     <!--endanglarjs-->
 </body>
 
