--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gabriela|Lobster">
 </head>
 
-<body onclick="screen()">
-    <div ng-controller="navController">
+<body>
+    <div ng-controller="navController as nav">
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a href="#" ng-click="nav.passId()" ui-sref="overview({_id: nav.ownerId})">Home</a>
@@ -45,8 +45,13 @@
             <div class="nav-left">
                 <a class="navTitle nav-item is-brand" href="#">chewBarka</a>
             </div>
+            <div ng-controller="loginController as login">
+                <div class="nav-right">
+                    <button id="login" ng-click="login.logoutUser()" class="button is-success">Logout</button>
+                </div>  
+            </div>
         </nav>
-        <div id="main">
+        <div>
             <span class="click" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
         </div>
         <!--LazyLoad-->
@@ -74,6 +79,8 @@
     <!--endbower-->
     <!--inject:js-->
     <script src="js/app.module.js"></script>
+    <script src="js/addPup/addPup.controller.js"></script>
+    <script src="js/equipment/equipment.controller.js"></script>
     <script src="js/core/crud.factory.js"></script>
     <script src="js/core/equipment.factory.js"></script>
     <script src="js/core/event.factory.js"></script>
@@ -87,16 +94,14 @@
     <script src="js/core/pup.factory.js"></script>
     <script src="js/core/register.factory.js"></script>
     <script src="js/core/todo.factory.js"></script>
-    <script src="js/addPup/addPup.controller.js"></script>
-    <script src="js/equipment/equipment.controller.js"></script>
     <script src="js/events/events.controller.js"></script>
     <script src="js/extra/grooming.controller.js"></script>
     <script src="js/extra/links.controller.js"></script>
     <script src="js/extra/shelter.controller.js"></script>
     <script src="js/login/login.controller.js"></script>
-    <script src="js/medical/medical.controller.js"></script>
     <script src="js/navBar/navbar.controller.js"></script>
     <script src="js/overview/overview.controller.js"></script>
+    <script src="js/medical/medical.controller.js"></script>
     <script src="js/parks/parks.controller.js"></script>
     <script src="js/photos/photo.controller.js"></script>
     <script src="js/pupInfo/pupInfo.controller.js"></script>
@@ -106,5 +111,4 @@
     <script src="http://use.fontawesome.com/29fd29a782.js"></script>
     <!--endanglarjs-->
 </body>
-
 </html>
