--- a/src/js/events/events.html
+++ b/src/js/events/events.html
@@ -1,8 +1,8 @@
 <div class="container">
 	<div class="large-6 columns">
-		<form ng-submit="events.getEvents(events.city)">
-			<input type="text" ng-model="events.city" placeholder="Enter Your Location">
-			<button class="button" type="submit">
+		<form ng-submit="events.getEvents(events.city.cityName)">
+			<input type="text" class="input is-primary" ng-model="events.city.cityName" placeholder="Enter Your Location">
+			<button class="button is-primary" type="submit">Search</button>
 		</form>
 	</div>
 	<div ng-repeat="event in events.events.events.event">
