--- a/src/js/login/login.html
+++ b/src/js/login/login.html
@@ -1,92 +1,4 @@
-<!-- <div style="float: center;">
-    <div class="large-3 large-centered columns">
-        <div class="signup-box">
-            <div class="row">
-                <div class="large-12 columns">
-                    <form ng-submit="login.registerUser(login.registerInfo)">
-  
-                        <div class="row">
-                            <div class="large-12 columns">
-                                <input type="text" name="firstName" placeholder="FistName" ng-model="login.registerInfo.firstName">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="large-12 columns">
-                                <input type="text" name="lastName" placeholder="LastName" ng-model="login.registerInfo.lastName">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="large-12 columns">
-                                <input type="text" name="address" placeholder="Address" ng-model="login.registerInfo.address">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="large-12 columns">
-                                <input type="text" name="zipcode" placeholder="Zipcode" ng-model="login.registerInfo.zipCode">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="large-12 columns">
-                                <input type="tel" name="telephone" placeholder="Phone" ng-model="login.registerInfo.telephone">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="large-12 columns">
-                                <input type="email" name="email" placeholder="Email" ng-model="login.registerInfo.email">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="large-12 columns">
-                                <input type="text" name="nsrRegistration" placeholder="NSR Registration" ng-model="login.registerInfo.nsrRegistration">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="large-12 columns">
-                                <input type="password" name="password" placeholder="Password" ng-model="login.registerInfo.password">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="large-12 columns">
-                                <input type="password" name="confirmPassword" placeholder="Confirm Password" ng-model="login.registerInfo.confirmPassword">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="large-centered columns">
-                                <button type="submit" class="button">Sign Up!
-                                    <button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
-<!-- Login -->
-<!-- <div style="float: center;">
-    <div class="large-3 large-centered columns">
-        <div class="login-box">
-            <div class="row">
-                <div class="large-12 columns">
-                    <form ng-submit="login.authUser(login.loginInfo)">
-                        <div class="row">
-                            <div class="large-12 columns">
-                                <input type="email" name="email" placeholder="Email" ng-model="login.loginInfo.email">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="large-12 columns">
-                                <input type="password" name="password" placeholder="Password" ng-model="login.loginInfo.password">
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="large-3 large-centered columns">
-                                <button type="submit" class="button">Login
-                                    <button>
-                            </div>
-                        </div>
-                    </form>
-                </div> -->
+<div class="img"></div>
 <!-- REGISTER -->
 <div ng-hide="!showing">
     <div class="column is-mobile">
@@ -161,3 +73,4 @@
         </div>
     </div>
 </div>
+
