Edit / Delete pupInfo Page

--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,15 @@
     <!--CustomCSS--> 
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gabriela|Lobster">
+<!--     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+ -->
     <!--endcustom-->
 
     <!--bower:css-->
     <link rel="stylesheet" href="bower_components/toastr/toastr.css" />
     <link rel="stylesheet" href="bower_components/angular-toastr/dist/angular-toastr.css" />
     <link rel="stylesheet" href="bower_components/bulma/css/bulma.css" />
+    <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css" />
     <!--endbower-->
 
     <!--inject:css-->
@@ -81,6 +84,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/filepicker-js/filepicker.min.js"></script>
     <script src="bower_components/angular-filepicker/dist/angular_filepicker.js"></script>
+    <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
     <!--endbower-->
     <!--inject:js-->
     <script src="js/app.module.js"></script>
@@ -90,6 +94,7 @@
     <script src="js/core/event.factory.js"></script>
     <script src="js/core/extra.factory.js"></script>
     <script src="js/core/family.factory.js"></script>
+    <script src="js/core/fitness.factory.js"></script>
     <script src="js/core/links.factory.js"></script>
     <script src="js/core/login.factory.js"></script>
     <script src="js/core/medical.factory.js"></script>
