--- a/src/js/overview/overview.html
+++ b/src/js/overview/overview.html
@@ -43,7 +43,7 @@
     <!-- End of owners information -->
     <!-- Todo and Pup Info -->
     <div class="columns">
-        <div class="column is-6">
+        <div class="column is-half-desktop is-full-mobile">
             <section class="panel">
                 <p class="panel-heading">
                     Here's your Todo List
@@ -112,6 +112,70 @@
         </div>
     </div>
 </div>
+
+
+<!-- <div class="container profile fontGabriela">
+    <div class="section profile-heading">
+        <div class="columns">
+            <div class="column is-2">
+                <div class="image is-128x128 avatar">
+                    <img class="profilePic" ng-src="{{overview.pupData[0].picture.url}}">
+                </div>
+            </div>
+            <div class="column is-4 name">
+                <p>
+                    <span class="title is-bold profileTitle">Welcome {{overview.owner.firstName}}!</span>
+                </p>
+                <br>
+            <p class="tagline userInfo">Let's stay up to date-</p>
+                 <form editable-form name="editableForm" onaftersave="overview.saveUser()">
+
+                    <p>Zip Code: <i editable-text="overview.owner.email" e-name="email" onbeforesave="checkName($data)" e-required>{{ overview.owner.email || 'empty' }}</i>
+                    </p>
+                    <p>Zip Code:<i editable-text="overview.owner.zipCode" e-name="zipCode" onbeforesave="checkName($data)" e-required>{{ overview.owner.zipCode || 'empty' }}</i>
+                    </p>
+                    <p>NSR Registration Number:<i editable-text="overview.owner.nsrRegistration" e-name="nsrRegistration" onbeforesave="checkName($data)" e-required>{{ overview.owner.nsrRegistration || 'empty' }}</i>
+                    </p>
+
+                    <div class="buttons">
+                      <button type="button" class="button-small" ng-click="editableForm.$show()" ng-show="!editableForm.$visible">
+                        Make a change
+                      </button>
+                      <span ng-show="editableForm.$visible">
+                        <button type="submit" class="button-small" ng-disabled="editableForm.$waiting" ng-click="overview.updateOwner(overview.owner, overview.ownerId)">
+                          Update
+                        </button>
+                        <button type="button" class="button-small" ng-disabled="editableForm.$waiting" ng-click="editableForm.$cancel()">
+                          Cancel
+                        </button>
+                      </span>
+                    </div>
+              </form> 
+            </div>
+            <div class="column is-2">
+                <p>
+                    <span class="title is-bold vetVisit has-text-centered">Next Vet Visit(s)</span>
+                </p>
+                <br>
+                <div ng-repeat='date in overview.vetAppt'>
+                    <p>{{date | date}}</p>
+                </div>
+            </div>
+            <div class="column is-3">
+                <p>
+                    <span class="title is-bold vetVisit has-text-centered">Last Fitness Activity</span>
+                </p>
+                <br>
+                <p class="userInfo">Date: {{overview.fitnessData[0][0].date | date}}</p>
+                <p class="userInfo">How'd it Go: {{overview.fitnessData[0][0].notes}}</p>
+            </div>
+            <div class="addPupText">
+                <label for="addPup">Add a new pup here!</label>
+                <a class="addPup" ng-click="overview.addPup()"><i class="fa fa-paw large" aria-hidden="true"></i></a>
+            </div>
+        </div>
+    </div> -->
+
 <!-- End of todo / pupInfo -->
 <!--     <div>
         <button class="button success" ng-click="overview.addPup()"><strong>Add a Pup</strong></button>
