--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,8 @@
     <link rel="stylesheet" href="js/events/events.css">
     <link rel="stylesheet" href="js/login/login.css">
     <link rel="stylesheet" href="js/overview/overview.css">
-    <link rel="stylesheet" href="js/parks/parks.css">
     <link rel="stylesheet" href="js/photos/photo.css">
+    <link rel="stylesheet" href="js/parks/parks.css">
     <link rel="stylesheet" href="js/pupInfo/pupInfo.css">
     <!--endinject-->
 </head>
@@ -59,9 +59,11 @@
         <div>
             <span class="click" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
         </div>
-        
+            
         <!--LazyLoad-->
+        <main>
         <div ui-view></div>
+        </main>
         <!--endlazyload-->
 
         <footer class="footer">
@@ -105,15 +107,15 @@
     <script src="js/core/todo.factory.js"></script>
     <script src="js/equipment/equipment.controller.js"></script>
     <script src="js/events/events.controller.js"></script>
+    <script src="js/login/login.controller.js"></script>
     <script src="js/extra/grooming.controller.js"></script>
     <script src="js/extra/links.controller.js"></script>
     <script src="js/extra/shelter.controller.js"></script>
-    <script src="js/login/login.controller.js"></script>
     <script src="js/medical/medical.controller.js"></script>
     <script src="js/navBar/navbar.controller.js"></script>
     <script src="js/overview/overview.controller.js"></script>
-    <script src="js/parks/parks.controller.js"></script>
     <script src="js/photos/photo.controller.js"></script>
+    <script src="js/parks/parks.controller.js"></script>
     <script src="js/pupInfo/pupInfo.controller.js"></script>
     <!--endinject-->
     <script src="style/main.js"></script>
