fixed merge conflicts

--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,8 @@
 
     <!--inject:css-->
     <link rel="stylesheet" href="js/addPup/addPup.css">
-    <link rel="stylesheet" href="js/equipment/equipment.css">
     <link rel="stylesheet" href="js/events/events.css">
+    <link rel="stylesheet" href="js/equipment/equipment.css">
     <link rel="stylesheet" href="js/login/login.css">
     <link rel="stylesheet" href="js/overview/overview.css">
     <link rel="stylesheet" href="js/parks/parks.css">
@@ -104,10 +104,10 @@
     <script src="js/core/photo.factory.js"></script>
     <script src="js/core/pup.factory.js"></script>
     <script src="js/core/register.factory.js"></script>
-    <script src="js/core/todo.factory.js"></script>
     <script src="js/addPup/addPup.controller.js"></script>
     <script src="js/equipment/equipment.controller.js"></script>
     <script src="js/events/events.controller.js"></script>
+    <script src="js/equipment/equipment.controller.js"></script>
     <script src="js/extra/grooming.controller.js"></script>
     <script src="js/extra/links.controller.js"></script>
     <script src="js/extra/shelter.controller.js"></script>
