--- a/src/js/overview/overview.html
+++ b/src/js/overview/overview.html
@@ -22,17 +22,20 @@
                     <span class="title is-bold vetVisit has-text-centered">Next Vet Visit(s)</span>
                 </p>
                 <br>
-                <!--  <div ng-repeat='date in overview.vetAppt'>
+                <div ng-repeat='date in overview.vetAppt'>
                     <p>{{date | date}}</p>
-                </div> -->
+                </div>
             </div>
             <div class="column is-3">
                 <p>
-                    <span class="title is-bold vetVisit has-text-centered">Last Fitness Activity</span>
+                    <span class="title is-bold vetVisit has-text-centered">Most Recent Fitness Activity</span>
                 </p>
                 <br>
-                <p class="userInfo">Date: {{overview.fitnessData[0][0].date | date}}</p>
-                <p class="userInfo">How'd it Go: {{overview.fitnessData[0][0].notes}}</p>
+                <!-- FIX THIS, WE ONLY WANT TO RETRIVE THE MOST CURRENT ITEM IN THIS ARRAY -->
+                <!-- ISSUE: MULTIPLE DOGS WILL NOT WORK, MAYBE LOOK TO FIND BY CERTAIN DATE, 
+                     OR DATE CLOSEST TO THE CURRENT DATE -->
+                <p class="userInfo">Date: {{overview.fitnessData[0][3].date | date}}</p>
+                <p class="userInfo">How'd it Go: {{overview.fitnessData[0][3].notes}}</p>
             </div>
             <div class="addPupText">
                 <label for="addPup">Add a new pup here!</label>
@@ -41,7 +44,6 @@
         </div>
     </div>
     <!-- End of owners information -->
-    
     <!-- Todo and Pup Info -->
     <div class="columns">
         <div class="column is-half-desktop is-full-mobile">
@@ -57,7 +59,7 @@
                             <td></td>
                             <td></td>
                         </tr>
-                        <tr ng-repeat="task in overview.owner.todo | orderBy: Date">
+                        <tr ng-repeat="task in overview.owner.todo | orderBy: '-date'">
                             <td ng-model="overview.task.task">
                                 <!-- editable task (text with validation) -->
                                 <i editable-text="task.task" e-name="task" e-form="rowform" onaftersave="checkName($data, todo._id)">{{ task.task }}</i>
