CSS for the main page

--- a/src/js/pupInfo/pupInfo.html
+++ b/src/js/pupInfo/pupInfo.html
@@ -9,7 +9,7 @@
                 <article class="tile is-child notification is-warning">
                     <p class="title">Who's {{pupInfo.pup.name}}</p>
                     <p class="subtitle">
-                        Birthday: {{pupInfo.pup.birthdate | date}}
+                        Age: {{pupInfo.pup.age}}
                         <br> Weight: {{pupInfo.pup.weight}} lbs
                         <br> Allergies: {{pupInfo.pup.allergies}}
                         <br> Medications: {{pupInfo.pup.medConditions}}
