Photos display correctly

--- a/src/js/login/login.html
+++ b/src/js/login/login.html
@@ -12,7 +12,7 @@
         </div>
     </div>
 </section>
-<section class="hero is-fullheight is-light is-bold">
+<section class="hero is-fullheight is-bold">
     <div class="hero-body">
         <div class="container">
             <div class="columns is-vcentered">
