--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
         </div>
     </div>
     <div id="push">
-        <nav class="nav">
+<!--         <nav class="nav">
             <div class="nav-left">
                 <a class="navTitle nav-item is-brand" href="#">chewBarka</a>
             </div>
@@ -55,7 +55,7 @@
                     <button id="login" ng-click="login.logoutUser()" class="button is-success">Logout</button>
                 </div>  
             </div>
-        </nav>
+        </nav> -->
         <div>
             <span class="click" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
         </div>
@@ -107,10 +107,10 @@
     <script src="js/core/register.factory.js"></script>
     <script src="js/core/todo.factory.js"></script>
     <script src="js/equipment/equipment.controller.js"></script>
-    <script src="js/events/events.controller.js"></script>
     <script src="js/extra/grooming.controller.js"></script>
     <script src="js/extra/links.controller.js"></script>
     <script src="js/extra/shelter.controller.js"></script>
+    <script src="js/events/events.controller.js"></script>
     <script src="js/login/login.controller.js"></script>
     <script src="js/medical/medical.controller.js"></script>
     <script src="js/navBar/navbar.controller.js"></script>
